--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,24 @@
-<p>elements-home works!</p>
+<app-divider>
+  Placeholder
+</app-divider>
+<app-placeholder> </app-placeholder>
+
+<app-divider>
+  Segment
+</app-divider>
+<app-segment>
+  <header>
+    <i class="pdf file outline icon"></i>
+    No documents are listed for this customer.
+  </header>
+
+  <button class="ui primary button">Add Document</button>
+</app-segment>
+<app-segment>
+  <header>
+    <i class="add icon"></i>
+    No documents to add.
+  </header>
+
+  <button class="ui primary button">Add</button>
+</app-segment>
