--- a/src/app/collections/collections-hone/collections-hone.component.html
+++ b/src/app/collections/collections-hone/collections-hone.component.html
@@ -1,1 +1,7 @@
-<p>collections-hone works!</p>
+<app-divider>Table Component</app-divider>
+<app-table
+  classNames="striped celled"
+  [data]="data"
+  [headers]="headers"
+></app-table>
+<router-outlet></router-outlet>
