--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -7,18 +7,18 @@
   Segment
 </app-divider>
 <app-segment>
-  <header>
+  <!-- <header>
     <i class="pdf file outline icon"></i>
     No documents are listed for this customer.
-  </header>
+  </header> -->
 
   <button class="ui primary button">Add Document</button>
 </app-segment>
-<app-segment>
+<!-- <app-segment>
   <header>
     <i class="add icon"></i>
     No documents to add.
   </header>
 
   <button class="ui primary button">Add</button>
-</app-segment>
+</app-segment> -->
