--- a/src/app/collections/collections-hone/collections-hone.component.html
+++ b/src/app/collections/collections-hone/collections-hone.component.html
@@ -4,4 +4,15 @@
   [data]="data"
   [headers]="headers"
 ></app-table>
-<router-outlet></router-outlet>
+<app-divider>Tab Menu</app-divider>
+<app-tabs>
+  <a
+    class="item"
+    routerLink="./"
+    [routerLinkActiveOptions]="{ exact: true }"
+    routerLinkActive="active"
+    >Biography</a
+  >
+  <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
+  <a class="item" routerLink="partners" routerLinkActive="active">Partners</a>
+</app-tabs>
